<resources>
    <string name="app_name">Switcheroo</string>
    <string name="join_game">Join game</string>
    <string name="host_game">Host game</string>
    <string name="a_qr_code">A qr code</string>
    <string name="hint_transactions">Please wait.</string>
    <string name="start_game">Start game</string>
    <string name="clear">Clear</string>
    <string name="send">Send</string>
    <string name="textview">TextView</string>
    <string name="caption_image_2">An image to view</string>
    <string name="answer_caption">Write your answer!!</string>
    <string name="textjoin_headline">Join game: Manual entry</string>
    <string name="textjoin_description">No camera permissions detected, falling back to manual entry. Please enter the host\'s game ID in the text field below.</string>
    <string name="textjoin_field_hint">Game ID</string>
    <string name="textjoin_button_caption">Join</string>
    <string name="displayqr_headline">Hosting: Scan QR to join</string>
    <string name="endgame_headline">Full circle: Round has ended</string>
    <string name="endgame_cont">Continue playing</string>
    <string name="endgame_back_main">Back to main menu</string>
    <string name="endgame_export">Export image</string>
    <string name="endgame_description">A full circle has been completed. You can continue playing, go back to the main menu, or export all texts and images as one big image to an app of your choice.</string>
    <string name="clientend_headline">Game Over!</string>
    <string name="clientend_description">The host has ended the game. You can either go back to the main menu directly, or export the full picture to an app of your choice.</string>
    <string name="clientend_back_main">Back to main menu</string>
    <string name="clientend_export">Export</string>
    <string name="hostend_endgame">End game</string>
    <string name="clientend_imageview_alt">The full image after the game.</string>
    <string name="quit">Quit</string>
    <string name="main_menu">Main Menu</string>
    <string name="main_menu_body">Welcome to Switcheroo! To join an existing game, select the Joinbutton. To host a new game, click the Hostbutton.</string>
    <string name="qrscan_headline">Scan the hosts QR code.</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="black">Black</string>
    <string name="undo">UNDO</string>
</resources>
