<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/drawing_text_hint"
        android:layout_width="368dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/textview"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toStartOf="@+id/drawing_draw_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/drawing_draw_view"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/drawing_text_hint">

        <Button
            android:id="@+id/redButton"
            android:layout_width="65dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="3dp"
            android:text="@string/red"
            android:background="@drawable/rounded_kawaii_buttons_red"
            app:layout_constraintEnd_toStartOf="@+id/yellowButton"
            app:layout_constraintStart_toEndOf="@+id/blackButton"
            app:layout_constraintTop_toBottomOf="@+id/drawing_text_hint" />

        <Button
            android:id="@+id/yellowButton"
            android:layout_width="65dp"
            android:layout_height="35dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="3dp"
            android:text="@string/yellow"
            android:background="@drawable/rounded_kawaii_buttons_yellow"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/greenButton"
            app:layout_constraintTop_toBottomOf="@+id/drawing_text_hint" />

        <Button
            android:id="@+id/greenButton"
            android:layout_width="65dp"
            android:layout_height="35dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/rounded_kawaii_buttons_green"
            android:text="@string/green"
            app:layout_constraintEnd_toStartOf="@+id/blueButton"
            app:layout_constraintTop_toBottomOf="@+id/drawing_text_hint" />

        <Button
            android:id="@+id/blueButton"
            android:layout_width="65dp"
            android:layout_height="35dp"
            android:layout_marginTop="3dp"
            android:text="@string/blue"
            android:textColor="#00FFFF"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_kawaii_buttons_bue"
            app:layout_constraintEnd_toEndOf="@id/greenButton"
            app:layout_constraintTop_toBottomOf="@+id/drawing_text_hint" />

        <Button
            android:id="@+id/blackButton"
            android:layout_width="65dp"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/rounded_kawaii_buttons_black"
            android:text="@string/black"
            android:textColor="#fff"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/drawing_text_hint" />


    </LinearLayout>

    <no.ntnu.stud.dominih.groupten.switcheroo.DrawView
        android:id="@+id/drawing_draw_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/drawing_text_hint"
        android:background="@android:color/transparent"

        app:layout_constraintBottom_toTopOf="@+id/drawing_send_button"
        app:layout_constraintTop_toBottomOf="@+id/layoutButton" />

    <Button
        android:id="@+id/drawing_send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="264dp"
        android:layout_toEndOf="@+id/drawing_clear_button"
        android:background="@drawable/rounded_buttons_canvas2"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/drawing_clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="264dp"
        android:background="@drawable/rounded_buttons_canvas"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/drawing_undo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_kawaii_buttons2"
        android:text="@string/undo"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/drawing_send_button"
        app:layout_constraintStart_toEndOf="@+id/drawing_clear_button" />


</android.support.constraint.ConstraintLayout>